# actix-demo

./: Cargo.toml  Procfile  README.md
src/: main.rs
static/: index.html  instruction.html
static/styles/: style.css
