[package]
name = "actix-demo"
version = "0.1.0"
authors = ["Apisit Ritreungroj <apisit_lon@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"